<resources>
    <string name="app_name">AmpuAppi</string>
    <string name="toolbar_header">     AmpuAppi </string>
    <string name="button_straight_to_labor">Synnytyksen\n vaiheet</string>
    <string name="button_on_the_way">Synnytystehtävälle\n saapuessa</string>
    <string name="button_how_to_act">Toimintatavat\n Kohteessa</string>
    <string name="button_onTheWay_or_inLocation">Hoidetaanko matkalla \n vai kohteessa?</string>
    <string name="button_eka_vaihe">1. Vaihe,\n Avautumisvaihe</string>
    <string name="button_toka_vaihe">2. Vaihe,\n Ponnistusvaihe</string>
    <string name="button_kolmas_vaihe">3. Vaihe,\n Jälkeisvaihe</string>
    <string name="button_normal_labor">Normaali\nSynnytys</string>
    <string name="button_peratilan_labor">Perätila\nSynnytys</string>
    <string name="button_hartiadystokia">Hartia-\ndystokia</string>
    <string name="button_napanuoran_esiinluiskahdus">Napanuoran\nEsiinluiskahdus</string>
    <string name="Erikoistilanteet">Ponnistusvaiheen\nerikoistilanteet</string>
    <string name="to_location_HEADER">Synnytystehtävään (791 A-D) tullessa huomioi seuraavat asiat: </string>
    <string name="to_location_REST">•\tKirjaa ylös synnyttäjän perustiedot (sairaudet, allergiat, monesko raskaus ja synnytys jne.)\n
•\tRaskausviikot, selvitä miten raskaus on edennyt ja onko sikiö perä- vai raivotarjonnassa\n
•\tKohteeseen päästyäsi tarkista
  mikä on synnytyksen tilanne:\n
     •   Onko lapsivesi mennyt?\n
     •   Koska se on mennyt?\n
     •   Lapsiveden väri?\n
     •   Kirkas vai vihreä/kellertävää?\n
     •   Hajuton/pahanhajuista?\n
     •   Onko supistuksia?\n
     •   Milloin ne ovat alkaneet?\n
     •   Kuinka tiheään supistuksia tulee?\n
     •   Onko synnytys oikeasti käynnissä?</string>
    <string name="OTW_or_IL_HEADER">Matkalle vai Kohteessa?</string>
    <string name="OTW_or_IL_REST">"Hoidetaan kohteessa jos:\n
• Supistuksia on 1-2 minuutin välein
  säännöllisesti
• Synnyttäjällä on ponnistamisen
  pakko
• Sikiön pää näkyy"\n
..........................................\n\n
  Matkaan jos:\n\n
        •   Lapsivesi on mennyt, mutta ei ole
            supistuksia\n
        •   Supistukset tulevat epäsäännöllisesti\n
        •   Supistukset tulevat\n
            säännöllisesti 2–15 minuutin välein\n
        •   Synnyttäjä otetaan kyytiin ja
            lähdetään liikkeelle, tutkimukset
            yms. voi tehdä matkalla\n\n
        •   MUISTA ENNAKKOILMOITUS!!!
</string>
    <string name="how_to_act_HEADER">Miten toimitaan:</string>
    <string name="how_to_act_REST">• Valmistaudu ottamalla synnytyssetit esille\n•	Paarien yläosa käännetään toisinpäin\n•	Synnyttäjä asetetaan vasemmalle kyljelleen\n•	Avaa i.v. -yhteys\n•	Seuraa supistusten väliä\n•	Jos synnyttäjällä tulee paineen tunne tai ponnistamisen pakko matkalla, pysäytä auto\n •	Lääkkeettömiä kivunlievitys keinoja voi kokeilla kuten hierontaa tai lämpöpussia kipukohtiin</string>
    <string name="eka_Dia_Peratila">• Perätilasynnytyksen aikana vältetään sikiön koskettelua, ennen kuin hän on syntynyt spontaanisti napavarttansa myöten\n• Sikiön lantiosta tartutaan siten, että peukalot ovat selän puolella ja sikiön vartaloa kierretään 90–180 astetta painaen samalla alaspäin</string>
    <string name="toka_Dia_Peratila">• Etummainen hartia vapautuu, minkä jälkeen vartaloa kierretään 180 astetta vastakkaiseen suuntaan samalla painaen alaspäin, jolloin toinenkin hartia vapautuu</string>
    <string name="kolmas_Dia_Peratila">• On huomattava, että sikiön kiertämisen tulee tapahtua niin, että selkä säilyy kohti äidin häpyliitosta, jotta pää ei joudu avosuiseen tarjontaan ja sikiön leuka lukkiudu symfyysiin\n• Käsien syntymistä voidaan auttaa kevyesti sormin huomioiden nivelten normaalit liikesuunnat\n• Kun hartiat ovat syntyneet, sikiön vartaloa voidaan vetää alaspäin, jolloin sikiön pää laskeutuu lantionpohjalle</string>
    <string name="neljas_Dia_Peratila">• Sikiön ollessa hajareisin avustajan kyynärvarren päällä, laitetaan vartalon alta tukevan käden etusormi ja keskisormi sikiön yläleukaan nenän kummallekin puolelle ja painetaan leukaa fleksioon</string>
    <string name="viides_Dia_Peratila">• Toisen käden etu- ja keskisormen kevyellä otteella hartioista painaen, autetaan pää kiertymään välilihan yli ja nostetaan sikiön vartalo kohti äidin vatsaa varoen venyttämästä kaularankaa</string>
    <string name="eka_Dia_Normaali">• Välilihan repeäminen estetään tukemalla sitä toisen kämmenellä, peukalo ja etusormi kurovat välilihaan joustoa \n• Samalla toisella kädellä kontrolloidaan pään syntymistä vat välilihaan ns. joustoa</string>
    <string name="toka_Dia_Normaali">• Kiiretilanteessa tukeminen on tärkeämpää kuin aseptiset toimenpiteen\n•	 Pään synnyttyä, se tekee tavallisesti käännöksen niin, että kasvot näyttävät sivulle\n</string>
    <string name="kolmas_Dia_Normaali">• Molemmilla käsillä otetaan lapsen pään sivuista kiinni ja painetaan päätä alaspäin, jolloin ylempi hartia syntyy\n•	Seuraavaksi päätä kohotetaan ylöspäin kohti häpyliitosta alemman hartian synnyttämiseksi</string>
    <string name="neljas_Dia_Normaali">• Kun pää ja hartiat ovat syntyneet, molempien käsien etusormet viedään lapsen selän kautta kainaloihin ja lapsen vartalo syntyy hellästi nostamalla\n•	Jos hartiat eivät synny helposti, asetetaan jokin koroke tai tyyny tai vastaava äidin pakaroiden alle</string>
    <string name="viides_Dia_Normaali">Viidesmatsku</string>
    <string name="eka_Dia_Hartiadystokia">• Hartiadystokiassa etummainen hartia kiilautuu häpyliitoksen eli symfyysin taakse\n• Synnyttyään pää vetäytyy näissä tilanteissa tiukasti välilihaa vasten, hartiat kiertyvät huonosti eikä etummainen hartia tule esille tavanomaisin ottein</string>
    <string name="toka_Dia_Hartiadystokia">• Tällöin synnyttäjä asetetaan välittömästi selälleen ja samalla lonkat viedään maksimaaliseen fleksioasentoon</string>
    <string name="kolmas_Dia_Hartiadystokia">• Avustaja voi painaa häpyliitoksen yläpuolelta hartiaa alas voimakkaasti, ja näin pyritään saamaan ulos etummainen hartia\n• Ellei tämä toimenpide onnistu, käännetään etummainen hartia viistomittaan painamalla sormin sikiön hartian takaa</string>
    <string name="neljas_Dia_Hartiadystokia">• Tarvittaessa voi hartioiden kiertoa tehostaa kääntämällä alimmaista hartiaa etupuolelta vastakkaiseen suuntaan, jolloin hartiat useimmiten syntyvät\n• Hartiadystokian komplikaationa vastasyntyneelle voi tulla solisluun murtuma tai hartiahermopunoksen vaurio</string>
    <string name="viides_Dia_Hartiadystokia">Viidesmatsku</string>
    <string name="eka_Dia_Napanuora">• Jos sikiökalvot ovat puhjenneet eikä tarjoutuva osa ole kiinnittynyt lantioon, on mahdollista, että napanuora luiskahtaa esiin\n• Synnytyksen edetessä tarjoutuva osa puristaa napanuoran itsensä ja luisen lantion väliin, ja sen seurauksena verenkierto napanuorassa estyy</string>
    <string name="toka_Dia_Napanuora">• Synnyttäjä asetetaan vasemmalle kyljelle paareille, ei saa itse kävellä ambulanssiin\n • JOS napanuora on luiskahtanut esiin, on ensihoitajan tehtävä steriilien hanskojen kanssa emättimen kautta työntää lasta kohdussa niin paljon eteenpäin, että syke tuntuu napanuorassa varovasti toisella kädellä painamalla</string>
    <string name="kolmas_Dia_Napanuora">• Synnyttäjä asetetaan polvilleen rintakehä alhaalla ja takapuoli ylhäällä sekä tarjoutuvaa osaa painetaan koko ajan synnytyskanavaa päin\n • Syke on tunnuttava napanuorassa koko kuljetuksen ajan</string>
    <string name="neljas_Dia_Napanuora">Neljasmatsku</string>
    <string name="viides_Dia_Napanuora">Viidesmatsku</string>
    <string name="eka_Dia_Ensimmainenvaihe">\n•	Synnyttäjä kokee voimakasta ponnistamisen tarvetta, kun kohdunsuu on täysin avautunut ja sikiön pää on laskeutunut synnytyskanavan alaosaan \n•	Supistuksia tulee 1–2 minuutin välein ja ne kestävät yleensä minuutin ajan \n•	Yleensä lapsen pää eli tarjoutuva osa painaa välilihaa, ja emättimen ulkosuu pullottaa ja alkaa avautua, jolloin lapsen pää saattaa näkyä \n•	Kun synnytys on edennyt tähän vaiheeseen, niin sitä ei voi enää estää millään tavoin \n•	Muista toimia rauhallisesti!</string>
    <string name="toka_Dia_Ensimmainenvaihe">Tokamatsku</string>
    <string name="kolmas_Dia_Ensimmainenvaihe">Kolmasmatsku</string>
    <string name="neljas_Dia_Ensimmainenvaihe">Neljasmatsku</string>
    <string name="viides_Dia_Ensimmainenvaihe">Viidesmatsku</string>
    <string name="eka_Dia_Kolmasvaihe">• Lapsen synnyttyä (MUISTA KIRJATA SYNTYMÄAIKA YLÖS)\n• Lapsi kuivataan hyvin ja pidetään lämpimänä\n• Arvioi lapsen vointi / APGAR 1-5-10/15\n• Vauva nostetaan äidin rinnalle iho ihoa vasten ja peitellään huolellisesti\n   HOX vastasyntynyt on liukas, pidettävä tiukasti mutta hellästi kiinni\n• Annetaan äidille syntocinon 8,3 µg/ml yksi ampulla i.v. tai i.m</string>
    <string name="toka_Dia_Kolmasvaihe">• Tämän jälkeen annetaan napanuoran sykkiä rauhassa tyhjäksi, sulkemisella ei ole kiire\n• Leikataan vasta sitten, kun sykettä ei enää tunnun\n• Napanuoraan asetetaan kaksi klipsiä. Toinen klipsi 10–15 cm lapsesta, vedetään veri sormilla poispäin napanuorasta ja laitetaan toinen klipsi. Tämän jälkeen voidaan napanuora leikata.\n •Jälkeisvaihe eli istukan ja kalvojen irtoamista voi rauhassa odotella, jopa 30</string>
    <string name="kolmas_Dia_Kolmasvaihe">Tarkkaile näitä merkkejä:\n• Kohdun koon muutos\n• Napanuoran valuminen ulospäin supistuksen aikana\n• Napanuoran veltostuminen ja lorahdusmainen vuoto emättimestä</string>
    <string name="neljas_Dia_Kolmasvaihe">Toimi näin:\n• Pyydä äidin ponnistaa supistuksen aikana\n• Vedä samalla varovasti napanuorasta ja paina funduksesta\n• HOX ei saa vetää lujasti, irtoamista voi odottaa rauhassa, jos vuotoa ei suuremmin ole\n• Jos istukka ja kalvot irtoaa, ota ne pussiin talteen\n• Merkitse syntymisaika</string>
    <string name="viides_Dia_Kolmasvaihe">• Tarkkaile vastasyntynyttä ja äidin vointia ja seuraile vuodon määrää painamalla kohtua ja katsomalla emättimestä tulleen veren määrää</string>
    <string name="info_text">Tämä on koulutyönä tehty kokeellinen sovellus, kaikki ominaisuudet ovat vielä työn alla ja mahdollisesti muuttuvat</string>
    <string name="feedback_text"> Hei! \nJos haluat lähettää meille\npalautetta/parannusehdotuksia,\nvoit tehdä sen täältä. \nPaina e-mail ikonia ja siirryt \nautomaattisesti oletussähköpostisovellukseesi!\n Huom! sähköpostia ei kannata vielä lähettää tätä kautta</string>
</resources>